# AL-pipe

./: .env  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py  setup.py
.github/workflows/: python-app.yml
al_pipe/: __init__.py  alpipe.py  main.py  train.py
al_pipe/data/: base_dataset.py  dna_dataset.py
al_pipe/embedding_models/configs/: example.yaml
al_pipe/embedding_models/static/: base_DNA_embedder.py  base_static_embedder.py  onehot_embedding.py
al_pipe/evaluation/: evaluator.py
al_pipe/first_batch/: base_first_batch.py  random.py  strategies.py
al_pipe/labeling/: in_silico_labeler.py
al_pipe/models/: onehot.py
al_pipe/queries/: base_strategy.py  random_sampling.py
al_pipe/regression/: mlp.py
al_pipe/training/: trainer.py
al_pipe/util/: data.py  general.py  logger.py
configs/: example.yaml
dataset/random_promo/: sub_sample_pTpA_All.csv
dataset/test/: test_data.csv
test/: conftest.py  test_data.py  test_embedding_models.py  test_insilico_labeler.py  test_util_data.py  test_util_general.py
