[project]
name = "al-pipe"
version = "0.1.0"
description = "Active learning pipeline aimed at reducing the need for intensive biological data generation"
readme = "README.md"
authors = [
    { name = "Zelun Li", email = "lizelun@westlake.edu.cn" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.3",
    "scikit-learn>=1.6.1",
    "wandb>=0.19.9",
]

[tool.ruff]
# Set the maximum line length to 120.
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "E501", # max line-length
    "D", # pydocstyle
    "UP", #pyupgrade
]
ignore=[
    "D212", # white space after docstring
    "D205", # 1 blank line between description and summary
    "D105", # Missing docstring in magic method
    "D200", # 1 line docstring should fit in 1 line
    "D107", # Missing docstring in `__init__` TODO: remove this later
    "D102", # Missing docstring in public method TODO: remove this later

]

[tool.ruff.lint.pydocstyle]
convention = "google"

